Add support for individual JSON file saving
- Updated `.gitignore` to exclude `output/` folder.
- Added `SaveIndividualJsonFiles` and `IndividualJsonOutputFolder` settings.
- Refactored `BGGDataFetcher` and `FileManager` to support saving individual game JSON files.
- Transitioned file operations to asynchronous methods for better scalability.
- Updated `BoardGame` and related models to use `required` properties for stricter type safety.
- Improved logging with asynchronous methods and enhanced error handling.
- Updated `README.md` and `BGGDataFetcher.Configuration.md` to document new features.
- Changed `BggApiClient` to use `string` for game IDs and added support for progress saving.
- Improved performance in `GameEnricher` and `XmlProcessor` with optimized collection handling.
- Upgraded target framework to `net10.0` in `BGGDataFetcher.csproj`.

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@ TopGames.json
 TopGamesDetailed.json
 TopGamesDetailed_progress_*.json
 bgg_top_*.csv
+
+# Individual game JSON output folder
+output/
